# cpp-jwt-utils

./: .appveyor.yml  .codecov.yml  .travis.yml  BUILD.md  CMakeLists.txt  README.md  RELEASENOTES.md  conanfile.py  conanfile.txt  deploy.sh  vs2019.conanprofile  vs2022.conanprofile
.github/workflows/: archive-docs.yml
ci/pipelines/: Build.jenkinsfile  Release.jenkinsfile
ci/scripts/: deploy.sh
src/JWTUtils/: CMakeLists.txt  Stdafx.h
src/JWTUtils/Services/: Base64EncodeService.cpp  Base64EncodeService.h  HMACSHA256SignatureService.cpp  HMACSHA256SignatureService.h  IBase64EncodeService.h  IHMACSHA256SignatureService.h  IJWTUtilsFactory.h  ITokenBuilderService.h  ITokenParserService.h  JWTUtilsFactory.cpp  JWTUtilsFactory.h  TokenBuilderService.cpp  TokenBuilderService.h  TokenParserService.cpp  TokenParserService.h
test/JWTUtilsTest/: CMakeLists.txt  JWTUtilsTest.cpp  stdafx.h
test/JWTUtilsTest/Tests/: Base64EncodeServiceTest.cpp  HMACSHA256SignatureServiceTest.cpp  JWTRoundtripTest.cpp  TokenBuilderServiceTest.cpp  TokenParserServiceTest.cpp
test/JWTUtilsTestUtilities/: CMakeLists.txt  conanfile.py  stdafx.h
test/JWTUtilsTestUtilities/Mocks/: MockBase64EncodeService.cpp  MockBase64EncodeService.h  MockHMACSHA256SignatureService.cpp  MockHMACSHA256SignatureService.h  MockJWTUtilsFactory.cpp  MockJWTUtilsFactory.h  MockTokenBuilderService.cpp  MockTokenBuilderService.h  MockTokenParserService.cpp  MockTokenParserService.h
test/JWTUtilsTestUtilities/test_package/: CMakeLists.txt  JWTUtilsTestUtilitiesExample.cpp  conanfile.py
test_package/: CMakeLists.txt  JWTUtilsExample.cpp  conanfile.py
